fix horizontal scroll

--- a/wp-content/themes/cardboard/sass/style.scss
+++ b/wp-content/themes/cardboard/sass/style.scss
@@ -1313,6 +1313,10 @@ footer.footer {
 	.footer__phone {
 		font-size: 17px;
 	}
+
+	.footer__email {
+		font-size: 15px;
+	}
 }
 
 @media screen and (max-width:480px) {
